@@ -1,23 +1,23 @@
 #### wby-springboot-dubbo
-+ wby-springboot-dubbo微服务开发平台，具有统一授权、认证后台管理系统，其中包含具备用户管理、资源权限管理等多个模块，支持多业务系统并行开发，可以作为后端服务的开发脚手架。代码简洁，架构清晰，适合学习和直接项目中使用。
-+ 核心技术采用SpringBoot、Dubbo、Mybatis、Mybatis-plus、Druid、Redis、ActiveMQ、RocketMQ、Quartz、JWT Token等主要框架和中间件。前端采用vue-element-ui组件。
++ wby-springboot-dubbo微服务开发平台，具有统一授权、认证后台管理系统，其中包含企业管理、系统管理等多个模块，支持多业务系统并行开发，可以作为后端的开发脚手架。代码简洁，架构清晰，适合学习和直接项目中使用。
++ 核心技术采用SpringBoot、Dubbo、Mybatis、Mybatis-plus、RocketMQ、Redis、ActiveMQ、Druid、Quartz、JWT Token等主要框架和中间件。前端采用vue-element-ui组件。
 + 前后端分离，通过token进行数据交互，可独立部署
 + 灵活的权限控制，可控制到页面或按钮，满足绝大部分的权限需求
 + 页面交互使用Vue2.x，极大的提高了开发效率
-+ 完善的代码生成机制，可在线生成entity、xml、dao、service、vue、sql代码，减少70%以上的开发任务
-+ 引入dubbo服务治理
++ 完善的代码生成机制，可在线生成entity、xml、dao、service、vue、sql代码，减少80%以上的开发任务
++ 引入dubbo微服务
 + 引入quartz定时任务，可动态完成任务的添加、修改、删除、暂停、恢复及日志查看等功能
 + 引入API模板，根据token作为登录令牌，极大的方便了APP接口开发
 + 引入Hibernate Validator校验框架，轻松实现后端校验
-+ 引入swagger文档支持，方便编写API接口文档
++ 引入swagger文档，方便编写API接口文档及前后端接口联调
 + 演示地址：http://locahost:8090 (账号密码：admin/123456)
 
 
 #### 项目地址
 
- 平台  | wby-springboot-dubbo（后端）  |wby-dubbo-ui（前端）
+ 平台  | wby-springboot-dubbo（后端）  |wby-tech-ui（前端）
 ---|---|---
-GitHub | [https://github.com/wby0014/wby-springboot-dubbo](https://github.com/wby0014/wby-springboot-dubbo) |[https://github.com/wby/wby-dubbo-ui](https://github.com/wby/wby-dubbo-ui)
+GitHub | [https://github.com/wby0014/wby-springboot-dubbo](https://github.com/wby0014/wby-springboot-dubbo) |[https://github.com/wby0014/wby-tech-ui](https://github.com/wby0014/wby-tech-ui)
 
 
 
@@ -53,10 +53,9 @@ wby-springboot-dubbo
 
 1. 准备环境
     + Java1.8  (v1.8.0_131+)
-    + Zookeeper服务发现和注册中心(v3.4.14+)<a href="https://mirrors.tuna.tsinghua.edu.cn/apache/zookeeper/zookeeper-3.4.14/zookeeper-3.4.14.tar.gz">下载地址</a>
+    + Zookeeper注册中心(v3.4.14+)
     + Redis (v3.2.100+)
-    + ActiveMQ (v5.15.8+)<a href="http://activemq.apache.org/components/classic/download/" target="_blank">下载地址</a>
-    + RabbitMQ (v3.7+)（需安装rabbitmq_delayed_message_exchange插件 <a href="https://www.rabbitmq.com/community-plugins.html" target="_blank">下载地址</a>）
+    + ActiveMQ (v5.15.8+)
     + RocketMQ (v4.0+)
     + Mysql (v5.7.26+)
     + Maven (v3+)
@@ -73,7 +72,7 @@ wby-springboot-dubbo
    +
 
 5. 初始化maven项目  
-    ``` bush
+    ``` 
         maven clean install
     ```
 
@@ -89,27 +88,21 @@ wby-springboot-dubbo
      
 7. 前端启动
     1. 安装淘宝NPM镜像
-    ```bush
+    ```
     npm install -g cnpm --registry=https://registry.npm.taobao.org
     npm config set registry  https://registry.npm.taobao.org
     ```
     2. 运行
-    ```bush
+    ```
         cnpm install 
         npm run dev
     ```
     访问 http://localhost:8090
     
-8. 项目打包部署  
-     maven多环境打包,并替换相关变量
-   ```bush
-      clean install -D profileActive={dev|test|prod} -f pom.xml
+8. maven多环境打包部署  
    ```
-
-9. JVM优化
-     ```bush  
-        -Xmx256m -Xms256m -Xss1m -Xmn128m -XX:+PrintGCDetails  
-     ```
+      mvn clean install -D profileActive={dev|test|prod} -f pom.xml
+   ```
 
 #### 系统预览
 <table>
@@ -121,20 +114,11 @@ wby-springboot-dubbo
      <td><img src="docs/images/3.png"/></td>
      <td><img src="docs/images/4.png"/></td>
   </tr>
-  <tr>
-     <td><img src="docs/images/5.png"/></td>
-     <td><img src="docs/images/6.png"/></td>
-  </tr>
-  <tr>
-    <td><img src="docs/images/7.png"/></td>
-    <td><img src="docs/images/8.png"/></td>
-  </tr>
 </table>
 
-#### 技术交流
-加入QQ群：
+#### 赞赏
 
-![qq](docs/images/QQ.png)
+![weixin](docs/images/weixin.png)
 
 #### 开发计划
 
@@ -142,9 +126,7 @@ wby-springboot-dubbo
  ##### v1.0.0 
   + SpringBoot更新到2.3.6
   + Dubbo更新到2.7.8
-  + 层级调整
   + 优化消息服务
   + 实现服务提供者之间相互调用
   + 实现消费者调用多个服务提供者
   + wby-web-base去掉数据库连接
-  + 优化前端代码
